--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: subosito/flutter-action@v1
+      with:
+          channel: 'dev'
     - run: flutter pub get
     - run: flutter config --enable-web
     - run: flutter build web
